1, 优化 工具类